--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@reduxjs/toolkit": "^2.9.0",
+    "@tanstack/react-query": "^5.86.0",
     "antd": "^5.27.0",
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.2",
+    "lodash": "^4.17.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
+    "react-toastify": "^11.0.5",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.19",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
