--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.86.0",
     "antd": "^5.27.0",
     "axios": "^1.11.0",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
     "lodash": "^4.17.21",
     "react": "^19.1.1",
