--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^44.3.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^44.3.0",
+    "@ckeditor/ckeditor5-react": "^11.0.0",
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.86.0",
     "antd": "^5.27.0",
     "axios": "^1.11.0",
+    "ckeditor5-custom-build": "^0.0.6",
+    "ckeditor5-custom-project": "file:Ckeditor",
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
     "lodash": "^4.17.21",
-    "react": "^19.1.1",
+    "quill": "^2.0.3",
+    "react": "^18.2.0",
     "react-countup": "^6.5.3",
-    "react-dom": "^19.1.1",
+    "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
     "react-toastify": "^11.0.5",
