--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
-    "@ckeditor/ckeditor5-build-classic": "^44.3.0",
+    "@ckeditor/ckeditor5-basic-styles": "^46.1.1",
     "@ckeditor/ckeditor5-build-decoupled-document": "^44.3.0",
+    "@ckeditor/ckeditor5-build-inline": "^44.3.0",
+    "@ckeditor/ckeditor5-editor-classic": "^46.1.1",
+    "@ckeditor/ckeditor5-essentials": "^46.1.1",
     "@ckeditor/ckeditor5-react": "^11.0.0",
+    "@ckeditor/ckeditor5-watchdog": "^46.1.1",
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.86.0",
     "antd": "^5.27.0",
     "axios": "^1.11.0",
-    "ckeditor5-custom-build": "^0.0.6",
-    "ckeditor5-custom-project": "file:Ckeditor",
+    "ckeditor5-build-oks": "^1.0.0",
+    "ckeditor5-premium-features": "^46.1.1",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
+    "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "quill": "^2.0.3",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
@@ -37,6 +44,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/ckeditor__ckeditor5-core": "^37.0.4",
+    "@types/ckeditor__ckeditor5-editor-classic": "^37.0.3",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
@@ -46,6 +55,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "sass-embedded": "^1.93.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
