--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,9 +25,11 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Types */
+    "types": ["node", "react", "react-dom"]
   },
-  "include": ["src", "Ckeditor"],
-  "exclude": ["node_modules"],
-  "types": []
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
